[workspace]
members = [
    "phf",
    "phf/examples/unicase-example",
    "phf_codegen",
    "phf_codegen/test",
    "phf_macros",
    "phf_macros_tests",
    "phf_shared"
]

[patch.crates-io]
phf = { path = "phf" }
phf_codegen = { path = "./phf_codegen" }
phf_macros = { path = "./phf_macros" }
phf_shared = { path = "./phf_shared" }
