[package]
name = "phf_macros"
version = "0.11.1"
authors = ["Steven Fackler <sfackler@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Macros to generate types in the phf crate"
repository = "https://github.com/rust-phf/rust-phf"
readme = "../README.md"
include = ["src/lib.rs"]
rust-version = "1.60"
categories = ["data-structures"]

[lib]
proc-macro = true

[dependencies]
phf_shared = { version = "0.9.0", default-features = false, features = ["macros"] }
proc-macro-hack = "0.5.4"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
quote = "1"
proc-macro2 = "1"
proc-macro-hack = "0.5.4"
unicase_ = { package = "unicase", version = "2.4.0", optional = true }

phf_shared = { version = "^0.11.1", default-features = false }

[dev-dependencies]
phf = { version = "*", features = ["macros", "unicase"] }
unicase_ = { package = "unicase", version = "2.4.0" }
trybuild = "1.0"
