[package]
name = "phf_macros"
version = "0.11.1"
authors = ["Steven Fackler <sfackler@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Macros to generate types in the phf crate"
repository = "https://github.com/rust-phf/rust-phf"
readme = "../README.md"
include = ["src/lib.rs"]
rust-version = "1.60"
categories = ["data-structures"]

[lib]
proc-macro = true

[features]
unicase = ["unicase_", "phf_shared/unicase"]

[dependencies]
phf_shared = { version = "^0.11.1", default-features = false, features = ["macros"]}
proc-macro-hack = "0.5.4"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
unicase_ = { package = "unicase", version = "2.4.0", optional = true }


[dev-dependencies]
phf = { version = "*", features = ["macros", "unicase"] }
trybuild = "1.0"
